[package]
name = "bigtalk"
version = "0.1.0"
edition = "2021"
authors = ["your-mom"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
fnv = "1.0.7"
futures = "0.3.26"
gc = { git = "https://github.com/Manishearth/rust-gc", features = ["nightly"] }
gc_derive = "0.4.1"
mopa = "0.2.2"
prehash = "1.0.0"
